--- a/ac-predictor/ac-predictor.csproj
+++ b/ac-predictor/ac-predictor.csproj
@@ -169,7 +169,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\APrefsController.cs" />
+    <Compile Include="API\APerfsController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
