--- a/ac-predictor/ac-predictor.csproj
+++ b/ac-predictor/ac-predictor.csproj
@@ -205,6 +205,7 @@
     <Compile Include="AtCoder\CompetitionResult.cs" />
     <Compile Include="AtCoder\Scraping.cs" />
     <Compile Include="AtCoder\Standing.cs" />
+    <Compile Include="Controllers\ContestResultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -266,6 +267,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\ContestResult\Index.cshtml" />
+    <Content Include="Views\ContestResult\Result.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
