[add] Contest結果Jsonを返す(AtCoderのを弾くだけ)

--- a/ac-predictor/ac-predictor.csproj
+++ b/ac-predictor/ac-predictor.csproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\APerfsController.cs" />
+    <Compile Include="API\StandingsController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
