Revert "[change] プリプロセッサの仕様変更"
This reverts commit 2b1d8246bef1ebc6e5cb1cc8b475bffbe7769f8a.

--- a/ac-predictor/ac-predictor.csproj
+++ b/ac-predictor/ac-predictor.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="predictor\ac-predictor.user.js" />
     <Content Include="predictor\estimator\dom.css" />
     <Content Include="predictor\estimator\dom.html" />
     <Content Include="predictor\estimator\dom.js" />
