--- a/ac-predictor/ac-predictor.csproj
+++ b/ac-predictor/ac-predictor.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Modules\HTTPHeaderModule.cs" />
     <Compile Include="MongoDB\APrefsDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\CrossOriginSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -266,6 +267,7 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <None Include="Scripts\_references.js" />
+    <Content Include="sw\atcoder-sw.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -284,6 +286,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\ContestResult\Index.cshtml" />
     <Content Include="Views\Install\Index.cshtml" />
+    <Content Include="sw\atcoder-manifest.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
