--- a/ac-predictor/packages.config
+++ b/ac-predictor/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="bootstrap" version="4.1.3" targetFramework="net461" />
   <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
@@ -36,6 +36,7 @@
   <package id="MongoDB.Driver" version="2.6.1" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
