[add] UserScriptの紹介ページを追加

--- a/ac-predictor/ac-predictor.csproj
+++ b/ac-predictor/ac-predictor.csproj
@@ -270,6 +270,7 @@
     <Content Include="Views\ContestResult\Index.cshtml" />
     <Content Include="Views\UserScript\Install.cshtml" />
     <Content Include="Notification\manifest.json" />
+    <Content Include="Views\UserScript\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
