--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "ac-predictor.user.js",
+  "name": "ac-predictor",
   "version": "1.0.0",
   "description": "パフォーマンス予測機能を主とした、AtCoder関連のツールを提供します。",
   "main": "ac-predictor/main.js",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "1.9.1"
+  },
   "devDependencies": {
-    "webpack-cli": "^3.1.2"
+    "webpack": "4.28.4",
+    "webpack-cli": "3.2.1",
+    "loader-utils": "1.2.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
