--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "jquery": "1.9.1"
   },
   "devDependencies": {
-    "webpack": "4.28.4",
-    "webpack-cli": "3.2.1",
-    "loader-utils": "1.2.3"
+    "loader-utils": "1.2.3",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.28.4",
+    "webpack-cli": "3.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
