--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "1.9.1"
   },
   "devDependencies": {
+    "html-loader": "^0.5.5",
     "loader-utils": "1.2.3",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
