--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "jquery": "1.9.1"
   },
   "devDependencies": {
+    "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "loader-utils": "1.2.3",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "3.2.1"
   },
