--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "3.2.1"
   },
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
