--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "css-loader": "^2.1.1",
     "eslint": "^6.0.0",
+    "prettier": "^1.18.2",
     "html-loader": "^0.5.5",
     "loader-utils": "1.2.3",
     "node-sass": "^4.11.0",
