--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "css-loader": "^2.1.1",
     "eslint": "^6.0.0",
-    "prettier": "^1.18.2",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "html-loader": "^0.5.5",
     "loader-utils": "1.2.3",
     "node-sass": "^4.11.0",
+    "prettier": "^1.18.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
