--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -45,5 +45,8 @@ jobs:
         git config --global user.email "kymn0116+predictor@gmail.com"
         git config --global user.name "ac-predictor"
         git add .
-        git commit -m "update GitHub Pages"
-        git push origin HEAD
+        if [[ ! ($(git status) == *"working tree clean"*) ]]; then   
+          git commit -m "update GitHub Pages"
+          git push origin HEAD
+        fi
+        
