--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -38,7 +38,16 @@ jobs:
         cp CNAME ../docs
         rm -rf $GITHUB_WORKSPACE/*
         cp -rT ../docs $GITHUB_WORKSPACE
-        
+
+    - name: setup node
+      uses: actions/setup-node@v1
+
+    - name: bundle files
+      run: |
+        cd ac-predictor-frontend
+        npm ci
+        npm run bundle
+
     - name: commit and push
       env: 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -50,4 +59,3 @@ jobs:
           git commit -m "update GitHub Pages"
           git push origin HEAD
         fi
-        
