inore deploy settings

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ __pycache__/
 /ac-predictor/Scripts/README.md
 /ac-predictor/Scripts/index.d.ts
 /ac-predictor-frontend/js/main.bundle.js
+*.pubxml
