--- a/ac-predictor-extension/package.json
+++ b/ac-predictor-extension/package.json
@@ -1,32 +1,27 @@
 {
   "name": "ac-predictor",
-  "version": "1.2.5",
-  "description": "パフォーマンス予測機能を主とした、AtCoder関連のツールを提供します。",
-  "main": "ac-predictor/main.js",
-  "dependencies": {
-    "atcoder-sidemenu": "^0.1.3",
-    "atcoder-userscript-libs": "^0.1.3",
-    "jquery": "^3.4.1",
-    "moment": "^2.24.0"
+  "version": "1.2.9",
+  "description": "コンテスト中にAtCoderのパフォーマンスを予測します。",
+  "typeRoots": [
+    "types",
+    "node_modules/@types"
+  ],
+  "scripts": {
+    "lint": "eslint 'src/**/*.ts'",
+    "lint:fix": "eslint --fix 'src/**/*.ts'",
+    "bundle": "rollup -c"
   },
   "devDependencies": {
-    "css-loader": "^2.1.1",
-    "eslint": "^6.0.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "html-loader": "^0.5.5",
-    "loader-utils": "1.2.3",
-    "node-sass": "^4.11.0",
-    "prettier": "^1.18.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.28.4",
-    "webpack-cli": "3.2.1"
-  },
-  "scripts": {
-    "build": "webpack",
-    "format": "eslint *.js /src/** --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "rollup": "^1.31.1",
+    "rollup-plugin-html": "^0.2.1",
+    "rollup-plugin-typescript": "^1.0.1",
+    "typescript": "^3.7.5"
   },
   "repository": {
     "type": "git",
@@ -37,5 +32,5 @@
   "bugs": {
     "url": "https://twitter.com/intent/tweet?screen_name=kymn_"
   },
-  "homepage": "https://github.com/key-moon/ac-predictor.user.js/wiki"
+  "homepage": "https://github.com/key-moon/ac-predictor"
 }
