--- a/ac-predictor-extension/package.json
+++ b/ac-predictor-extension/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint --fix 'src/**/*.ts'",
-    "bundle": "rollup -c"
+    "bundle": "rollup -c",
+    "test": "jest"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.20.0",
@@ -17,6 +18,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^26.6.3",
     "prettier": "^1.19.1",
     "rollup": "^1.31.1",
     "rollup-plugin-html": "^0.2.1",
