--- a/ac-predictor-extension/package.json
+++ b/ac-predictor-extension/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "eslint": "^6.8.0",
@@ -23,6 +24,7 @@
     "rollup": "^1.31.1",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-typescript": "^1.0.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^3.7.5"
   },
   "repository": {
