--- a/addon/package.json
+++ b/addon/package.json
@@ -31,5 +31,8 @@
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "tslib": "^2.6.0"
+  }
 }
