--- a/addon/tsconfig.json
+++ b/addon/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "lib": ["es2023", "dom"]
+    "target": "es2022",
+    "lib": ["es2022", "dom"]
   }
 }
