--- a/addon/tsconfig.json
+++ b/addon/tsconfig.json
@@ -5,6 +5,8 @@
     "./node_modules/@types"
   ],
   "compilerOptions": {
+    "moduleResolution": "Node16",
+    "resolveJsonModule": true,
     "target": "es2022",
     "lib": ["es2022", "dom"]
   }
