--- a/.github/workflows/11-update-caches.yaml
+++ b/.github/workflows/11-update-caches.yaml
@@ -1,4 +1,4 @@
-name: refresh caches
+name: update caches
 
 on:
   workflow_dispatch: # for debugging
@@ -6,18 +6,13 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  update-caches:
-    runs-on: ubuntu-latest
-    env:
-      REPOSITORY_PATH: ./ac-predictor-data # TODO: make absolute paths
-    steps:
-      - name: Crawl
-        secrets:
-          ATCODER_USERNAME: ${{ secrets.ATCODER_USERNAME }}
-          ATCODER_PASSWORD: ${{ secrets.ATCODER_PASSWORD }}
-        uses: ./.github/workflows/run-crawler.yaml
-        with:
-          data-repository: key-moon/ac-predictor-data
-          command: |
-            ac-predictor-crawler-runner crawl-results
-            curl -fsS -m 10 --retry 5 https://hc-ping.com/${{ secrets.CRAWL_RESULTS_UUID }}/$?
+  update-aperfs:
+    uses: ./.github/workflows/run-crawler.yaml
+    with:
+      data-repository: key-moon/ac-predictor-data
+      command: ac-predictor-crawler-runner crawl-results
+    secrets:
+      ATCODER_USERNAME: ${{ secrets.ATCODER_USERNAME }}
+      ATCODER_PASSWORD: ${{ secrets.ATCODER_PASSWORD }}
+      HEALTHCHECK_UUID: ${{ secrets.CRAWL_RESULTS_UUID }}
+      DATA_DEPLOY_KEY: ${{ secrets.DATA_DEPLOY_KEY }}
