--- a/.github/workflows/12-refresh-caches.yaml
+++ b/.github/workflows/12-refresh-caches.yaml
@@ -6,18 +6,13 @@ on:
     - cron: '5 0 * * Sat'
 
 jobs:
-  refresh-caches:
-    runs-on: ubuntu-latest
-    env:
-      REPOSITORY_PATH: ./ac-predictor-data # TODO: make absolute paths
-    steps:
-      - name: Crawl
-        secrets:
-          ATCODER_USERNAME: ${{ secrets.ATCODER_USERNAME }}
-          ATCODER_PASSWORD: ${{ secrets.ATCODER_PASSWORD }}
-        uses: ./.github/workflows/run-crawler.yaml
-        with:
-          data-repository: key-moon/ac-predictor-data
-          command: |
-            ac-predictor-crawler-runner refresh-results
-            curl -fsS -m 10 --retry 5 https://hc-ping.com/${{ secrets.REFRESH_RESULTS_UUID }}/$?
+  update-aperfs:
+    uses: ./.github/workflows/run-crawler.yaml
+    with:
+      data-repository: key-moon/ac-predictor-data
+      command: ac-predictor-crawler-runner refresh-results
+    secrets:
+      ATCODER_USERNAME: ${{ secrets.ATCODER_USERNAME }}
+      ATCODER_PASSWORD: ${{ secrets.ATCODER_PASSWORD }}
+      HEALTHCHECK_UUID: ${{ secrets.REFRESH_RESULTS_UUID }}
+      DATA_DEPLOY_KEY: ${{ secrets.DATA_DEPLOY_KEY }}
