--- a/.github/workflows/12-refresh-caches.yaml
+++ b/.github/workflows/12-refresh-caches.yaml
@@ -12,7 +12,6 @@ jobs:
       data-repository: key-moon/ac-predictor-data
       command: ac-predictor-crawler-runner refresh-results
     secrets:
-      ATCODER_USERNAME: ${{ secrets.ATCODER_USERNAME }}
-      ATCODER_PASSWORD: ${{ secrets.ATCODER_PASSWORD }}
+      ATCODER_SESSION: ${{ secrets.ATCODER_SESSION }}
       HEALTHCHECK_UUID: ${{ secrets.REFRESH_RESULTS_UUID }}
       DATA_DEPLOY_KEY: ${{ secrets.DATA_DEPLOY_KEY }}
